--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   "keywords": [],
   "author": "xsiliezxr",
   "license": "ISC",
-  "packageManager": "pnpm@10.28.1",
+  "packageManager": "pnpm@10.29.2",
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  },
   "dependencies": {
     "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
-    "dotenv": "^17.3.1",
+    "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.2.1",
+    "mongoose": "^9.2.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "multer-storage": "^0.4.1",
-    "nodemon": "^3.1.11"
+    "multer-storage-cloudinary": "^4.0.0",
+    "uuid": "^13.0.0"
   }
 }
