--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#729258",
-        "activityBar.background": "#729258",
+        "activityBar.activeBackground": "#a4d070",
+        "activityBar.background": "#a4d070",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#c3cedb",
-        "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#729258",
-        "statusBar.background": "#597245",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#729258",
-        "statusBarItem.remoteBackground": "#597245",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#597245",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#59724599",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "activityBarBadge.background": "#3f85c0",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#a4d070",
+        "statusBar.background": "#8bc34a",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#71a436",
+        "statusBarItem.remoteBackground": "#8bc34a",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#8bc34a",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#8bc34a99",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#597245"
+    "peacock.color": "#8BC34A"
 }
